tests/paczka1/fuzzy1/95254482.err
Error in line 17: S164 S164 43,5
Error in line 15: WIVsYDeP A318 26,8
Error in line 28: 3sRJljMt S164 28,4
Error in line 26: WIVsYDeP A532 60,5
